# Xbrowser

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  deploy.cmd  dev.cmd  package.cmd  run.cmd
cmake/: RunWinDeployQt.cmake  WebView2Sdk.cmake  qt.conf
docs/: BUILDING.md  DESIGN.md  RUNNING.md  UX_SPEC.md  ZEN_ALIGNMENT_REVIEW.md  ZEN_BUILD_NOTES.md  ZEN_COMPAT.md
reference/: zen_browser_feature_impl_plan.csv  zen_browser_feature_layout.csv  zen_browser_interaction_plan.csv  zen_browser_interaction_plan_v2.csv  zen_browser_interaction_plan_v3.csv  zen_browser_merged_all.csv  zen_browser_merged_areas.csv  zen_browser_merged_counts_by_area.csv  zen_browser_merged_developed.csv  zen_browser_merged_developing.csv  zen_browser_next_plan_v4.csv
reference/developing/: zen_browser_developing_plan.csv  zen_browser_next_plan_v5.csv
reference/logs/: zen_browser_feature_impl_plan.csv  zen_browser_feature_layout.csv  zen_browser_interaction_plan.csv  zen_browser_interaction_plan_v2.csv  zen_browser_interaction_plan_v3.csv  zen_browser_next_plan_v4.csv
scripts/: check.ps1  configure.cmd  configure.ps1  deploy.cmd  deploy.ps1  dev.cmd  dev.ps1  merge_plans.ps1  package.cmd  package.ps1  report_zen_module_coverage.ps1  run.cmd  run.ps1
src/: CMakeLists.txt
src/app/: main.cpp
src/core/: AppPaths.cpp  AppPaths.h  AppSettings.cpp  AppSettings.h  BookmarksFilterModel.cpp  BookmarksFilterModel.h  BookmarksStore.cpp  BookmarksStore.h  BrowserController.cpp  BrowserController.h  CommandBus.cpp  CommandBus.h  DiagnosticsController.cpp  DiagnosticsController.h  DownloadFilterModel.cpp  DownloadFilterModel.h  DownloadModel.cpp  DownloadModel.h  ExtensionsFilterModel.cpp  ExtensionsFilterModel.h  ExtensionsStore.cpp  ExtensionsStore.h  FaviconCache.cpp  FaviconCache.h  HistoryFilterModel.cpp  HistoryFilterModel.h  HistoryStore.cpp  HistoryStore.h  LayoutController.cpp  LayoutController.h  ModsModel.cpp  ModsModel.h  NotificationCenter.cpp  NotificationCenter.h  OmniboxUtils.cpp  OmniboxUtils.h  ProfileLock.cpp  ProfileLock.h  QuickLinksModel.cpp  QuickLinksModel.h  (+28 more)
src/engine/webview2/: BrowserExtensionsModel.cpp  BrowserExtensionsModel.h  WebView2CookieModel.cpp  WebView2CookieModel.h  WebView2View.cpp  WebView2View.h
src/platform/windows/: NativeUtils.cpp  NativeUtils.h  WindowChromeController.cpp  WindowChromeController.h  WindowsShareController.cpp  WindowsShareController.h
tests/: CMakeLists.txt  TestAppSettings.cpp  TestBackClosePolicy.cpp  TestBookmarksStore.cpp  TestDownloadModel.cpp  TestExtensionsStore.cpp  TestHistoryStore.cpp  TestLayoutController.cpp  TestNotificationCenter.cpp  TestOmniboxUtils.cpp  TestProfileLock.cpp  TestSessionStore.cpp  TestShortcutStore.cpp  TestSitePermissionsStore.cpp  TestSplitViewController.cpp  TestTabModel.cpp  TestTabSwitcherModel.cpp  TestThemeSystem.cpp  TestToastController.cpp  TestWebPanelsStore.cpp  TestWorkspaceModel.cpp
ui/: ui.qrc
ui/qml/: BrowserWindow.qml  Main.qml
ui/qml/components/: BookmarksPanel.qml  ClearDataDialog.qml  ContextMenu.qml  DiagnosticsDialog.qml  DownloadsDialog.qml  EmojiPicker.qml  ExtensionsDialog.qml  FindBar.qml  HistoryPanel.qml  MediaControls.qml  ModsDialog.qml  NotificationsStack.qml  OnboardingDialog.qml  OverlayHost.qml  PermissionDoorhanger.qml  PermissionsCenter.qml  PopupManager.qml  PrintDialog.qml  SettingsDialog.qml  Shortcuts.qml  ShortcutsEditor.qml  SidebarFooter.qml  SiteDataPanel.qml  SiteInfoPanel.qml  SitePermissionsPanel.qml  TabSwitcher.qml  ThemesDialog.qml  ToastHost.qml  ToolWindowManager.qml  WebPanelsDialog.qml
